<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnActivityViewController">

  <Button
      android:id="@+id/menuBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="#BDBDBD"
      android:text="@string/menu"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.05"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.963" />

  <TextView
      android:id="@+id/question2TextView"
      android:layout_width="270dp"
      android:layout_height="131dp"
      android:background="@color/secondaryProjectBlue"
      android:padding="50dp"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.251" />

  <TextView
      android:id="@+id/questionTextView"
      android:layout_width="270dp"
      android:layout_height="131dp"
      android:background="@color/ProjectBlue"
      android:padding="50dp"
      android:text="@string/question"
      android:textAlignment="center"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.39"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.213" />

  <TextView
      android:id="@+id/answer2TextView"
      android:layout_width="270dp"
      android:layout_height="131dp"
      android:background="#cdffe3"
      android:padding="50dp"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.581"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.715" />

  <TextView
      android:id="@+id/answerTextView"
      android:layout_width="270dp"
      android:layout_height="131dp"
      android:background="@color/ProjectGreen"
      android:padding="50dp"
      android:text="@string/answer"
      android:textAlignment="center"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.675" />

  <Button
      android:id="@+id/answerBtn"
      android:layout_width="273dp"
      android:layout_height="48dp"
      android:backgroundTint="@color/ProjectGreen"
      android:fontFamily="sans-serif-light"
      android:text="@string/show_answer"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.507"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.863" />

  <Button
      android:id="@+id/questionBtn"
      android:layout_width="273dp"
      android:layout_height="48dp"
      android:backgroundTint="@color/ProjectBlue"
      android:fontFamily="sans-serif-light"
      android:text="@string/show_question"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.462" />

  <TextView
      android:id="@+id/learnTextView"
      android:layout_width="179dp"
      android:layout_height="74dp"
      android:fontFamily="sans-serif-light"
      android:text="@string/learn"
      android:textAlignment="center"
      android:textSize="48sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.039" />
</androidx.constraintlayout.widget.ConstraintLayout>